# docs/swagger.yaml
@@ -1,5 +1,5 @@
 definitions:
-  models.Gist:
+  model.Gist:
     properties:
       created_at:
         type: string
@@ -7,7 +7,7 @@ definitions:
         type: string
       files:
         items:
-          $ref: '#/definitions/models.GistFile'
+          $ref: '#/definitions/model.GistFile'
         type: array
       id:
         type: integer
@@ -16,7 +16,7 @@ definitions:
       updated_at:
         type: string
     type: object
-  models.GistFile:
+  model.GistFile:
     properties:
       created_at:
         type: string
@@ -29,13 +29,13 @@ definitions:
       updated_at:
         type: string
     type: object
-  models.Person:
+  model.Person:
     properties:
       created_at:
         type: string
       gists:
         items:
-          $ref: '#/definitions/models.Gist'
+          $ref: '#/definitions/model.Gist'
         type: array
       github_username:
         description: Github max length is 39
@@ -66,7 +66,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/models.Person'
+              $ref: '#/definitions/model.Person'
             type: array
       summary: gets all people who their gists are being monitored
       tags:
@@ -129,7 +129,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.Person'
+            $ref: '#/definitions/model.Person'
         "404":
           description: Not Found
           schema:
