# router/router.go
@@ -16,8 +16,8 @@ func New(personHandler *handlers.PersonHandler) *echo.Echo {
 	e.GET("/documentation/*", echoSwagger.WrapHandler)
 	apiV1 := e.Group("/api/v1")
 	apiV1.GET("/people", personHandler.GetAllPeople)
-	apiV1.GET("/person/:username", personHandler.GetPerson)
-	apiV1.DELETE("/person/:username", personHandler.DeletePerson)
-	apiV1.POST("/person", personHandler.SavePerson)
+	apiV1.GET("/people/:username", personHandler.GetPerson)
+	apiV1.DELETE("/people/:username", personHandler.DeletePerson)
+	apiV1.POST("/people", personHandler.SavePerson)
 	return e
 }
